--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Hola, mundo!</h1>
-    <script src="./index.ts"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
