--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mi proyecto con Yarn, TypeScript y Parcel</title>
   </head>
   <body>
-    <h1>Hola, mundo!</h1>
+    <h1>Hola, mundo! Hello World!</h1>
     <script src="./index.ts"></script>
   </body>
 </html>
